<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerSetup"
    android:background="#FFA07A">

    <TextView
        android:id="@+id/NameEntryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/playerSetupTitle"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Name1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1Label"
        android:textColor="#0027FF"
        app:layout_constraintBottom_toTopOf="@+id/Name1Entry"
        app:layout_constraintStart_toStartOf="@+id/Name1Entry" />

    <TextView
        android:id="@+id/Name2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2Label"
        android:textColor="#0B514B"
        app:layout_constraintBottom_toTopOf="@+id/Name2Entry"
        app:layout_constraintStart_toStartOf="@+id/Name2Entry" />

    <EditText
        android:id="@+id/Name1Entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameEntryTitle" />

    <EditText
        android:id="@+id/Name2Entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name1Entry" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:width="150dp"
        android:background="@drawable/redbutton"
        android:onClick="submitButtonClick"
        android:text="@string/submitButtonString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name2Entry" />
</androidx.constraintlayout.widget.ConstraintLayout>